Refactor progress service implementation
- Enhanced error handling by introducing NotFoundException for missing progress data.
- Removed redundant checks and streamlined the initialization of user progress.
- Consolidated module progress retrieval and initialization logic.
- Improved study session management by handling active sessions more effectively.
- Added UserProgressInitializeService to handle user progress initialization.
- Cleaned up ProgressMapper to improve readability and maintainability.
- Removed unused methods and imports to simplify the codebase.